--- a/index.html
+++ b/index.html
@@ -78,6 +78,29 @@ button:hover {
     width: auto;          /* মোবাইল ছাড়া বড় স্ক্রিনে প্রস্থ অটোমেটিক */
   }
 }
+#productGrid {
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(1, 1fr); /* ডিফল্ট: ১টি কলাম */
+}
+
+@media (min-width: 480px) {
+  #productGrid {
+    grid-template-columns: repeat(2, 1fr); /* ৪৮০px বা বড় স্ক্রিনে ২ কলাম */
+  }
+}
+
+@media (min-width: 768px) {
+  #productGrid {
+    grid-template-columns: repeat(3, 1fr); /* ৭৬৮px বা বড় স্ক্রিনে ৩ কলাম */
+  }
+}
+
+@media (min-width: 1024px) {
+  #productGrid {
+    grid-template-columns: repeat(4, 1fr); /* ১০২৪px বা বড় স্ক্রিনে ৪ কলাম */
+  }
+}
 
 
 
@@ -103,24 +126,35 @@ button:hover {
       </div>
     </header>
 
-    <!-- Hero Section -->
-    <section class="bg-green-100 py-8 sm:py-10 md:py-12 px-4 text-center">
-      <section class="py-8 sm:py-10 md:py-12 px-4">
+<!-- Hero Section -->
+<section class="bg-green-100 py-8 sm:py-10 md:py-12 px-4">
+  <div class="container mx-auto flex flex-col md:flex-row items-center gap-8">
 
-      <h2 class="text-3xl font-semibold mb-2">সুন্নাতের মধ্যেই সৌন্দর্য।</h2>
-      <div class="max-w-2xl mx-auto mt-6 text-gray-700 text-base leading-relaxed">
-        <p class="mb-3 font-semibold">সুন্নাহই আমাদের সৌন্দর্যের আসল মাপকাঠি।</p>
-        <p class="mb-2">
+    <!-- Left: Image -->
+    <div class="w-full md:w-1/2">
+      <img src="cover.jpg" alt="Cover Image" class="w-full h-auto rounded-lg shadow-lg" />
+    </div>
+
+    <!-- Right: Text -->
+    <div class="w-full md:w-1/2 text-center md:text-left">
+      <h2 class="text-3xl font-semibold mb-4 text-gray-800">সুন্নাতের মধ্যেই সৌন্দর্য।</h2>
+      <div class="text-gray-700 text-base leading-relaxed space-y-4">
+        <p class="font-semibold">সুন্নাহই আমাদের সৌন্দর্যের আসল মাপকাঠি।</p>
+        <p>
           আমাদের এখানে প্রিমিয়াম মানের আতর, সুরমা, তাসবীহ, মিসওয়াক এবং খাঁটি কাসেমী টুপি উপলব্ধ। পাশাপাশি, বিভিন্ন নকশায় পাঞ্জাবী, পায়জামা, জুব্বা, শেরওয়ানি, কাবলি, ফতুয়া, কটি ও টুপি সহ সকল ধরনের সুন্নাহ পোশাক সর্বোচ্চ যত্ন এবং পারদর্শিতার সঙ্গে তৈরি করা হয়।
         </p>
-        <p class="mb-2">
+        <p>
           প্রত্যেকটি পণ্যই খোদার পথে চলার জন্য আপনাকে সাজাতে তৈরি, যাতে আপনার সৌন্দর্যে ছড়ায় আধ্যাত্মিকতা ও শিষ্টাচার।
         </p>
         <p class="font-semibold">
           আপনার খোঁজ এখানেই শেষ—সুন্নাহ মোতাবেক নিখুঁত পোশাকের জন্য আমাদের সাথে থাকুন।
         </p>
       </div>
-    </section>
+    </div>
+
+  </div>
+</section>
+
 
     <!-- Products Section -->
     <section id="products" class="py-12 px-4 bg-gray-50">
@@ -330,6 +364,8 @@ function openOrderModal(productName) {
   modal.querySelector('h2').innerText = `📝 ${productName} এর অর্ডার ফর্ম`;
   modal.classList.remove('hidden');
 }
+
+
 
 // Close modals
 function closeQuickView() {
