--- a/index copy.html
+++ b/index copy.html
@@ -2,77 +2,180 @@
 <html lang="bn">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AZZAN SUNNATI LEBAS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>AZAAN SUNNATI LEBAS</title>
+
   <style>
     body {
-      font-family: 'Noto Serif Bengali', 'Siyam Rupali', serif;
+      font-family: "Noto Sans Bengali", sans-serif;
       margin: 0;
       padding: 0;
-      background: #f4f4f4;
+      background: #f0fdf4;
       color: #222;
     }
-    header {
+
+    header.top-header {
       background: #065f46;
       color: white;
-      padding: 40px 20px;
-      text-align: center;
+      padding: 15px 20px;
+      border-radius: 0 0 20px 20px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 15px;
     }
-    header h1 {
+
+    .header-left {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      flex: 1 1 250px;
+    }
+
+    .header-left img.logo {
+      width: 50px;
+      height: 50px;
+      object-fit: contain;
+      border-radius: 8px;
+      background: white;
+    }
+
+    .header-left h1 {
+      font-size: 1.8rem;
       margin: 0;
-      font-size: 2.2em;
+      font-weight: 700;
+      user-select: none;
+      white-space: nowrap;
     }
-    header p {
-      margin: 10px 0;
-      font-size: 1.2em;
+
+    .header-right {
+      flex: 0 0 auto;
     }
-    section {
-      padding: 40px 20px;
-      text-align: center;
+    .header-right img {
+      width: 60px;
+      height: 60px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 2px solid white;
     }
-    .btn {
-      background: #10b981;
-      color: white;
-      padding: 12px 25px;
-      text-decoration: none;
-      font-size: 16px;
-      border-radius: 5px;
-      display: inline-block;
-      margin-top: 20px;
-    }
-    .product-img {
-      width: 90%;
-      max-width: 400px;
-      margin: 20px auto;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    footer {
-      background: #1f2937;
-      color: #ccc;
-      text-align: center;
+
+    .search-container {
+      background: #065f46;
       padding: 20px;
+      border-radius: 0 0 20px 20px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+
+      max-width: 700px;
+      width: 90%;
+
+      margin-left: auto;
+      margin-right: auto;
+
+      display: flex;
+      justify-content: center;
+    }
+
+    #searchForm {
+      position: relative;
+      width: 100%;
+      max-width: 700px;
+    }
+
+    #searchInput {
+      width: 90%;
+      height: 48px;
+      padding: 0 45px 0 20px; /* ডানে আইকনের জন্য */
+      font-size: 1.1rem;
+      border-radius: 30px;
+      border: none;
+      outline: none;
+      box-shadow: 0 3px 10px rgba(16,185,129,0.3);
+      transition: box-shadow 0.3s ease;
+    }
+
+    #searchInput:focus {
+      box-shadow: 0 0 15px #10b981;
+    }
+
+    .search-icon {
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+      pointer-events: none;
+      color: #10b981;
+      font-size: 20px;
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      header.top-header {
+        flex-direction: column;
+        gap: 12px;
+      }
+      .header-left {
+        justify-content: center;
+        flex: none;
+      }
+      .header-right {
+        order: -1;
+      }
+      .search-container {
+        max-width: 100%;
+        margin: 10px auto 30px;
+        padding: 15px;
+        border-radius: 15px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>AZZAN SUNNATI LEBAS</h1>
-    <p>সুন্নাতের মধ্যেই সৌন্দর্য</p>
-    <p>সুন্নাহই আমাদের সৌন্দর্যের আসল মাপকাঠি।</p>
+  <!-- Header Section -->
+  <header class="top-header">
+    <div class="header-left">
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/8/8d/Islamic_Crescent.svg"
+        alt="Logo"
+        class="logo"
+      />
+      <h1>AZAAN SUNNATI LEBAS</h1>
+    </div>
+    <div class="header-right">
+      <img
+        src="https://randomuser.me/api/portraits/men/75.jpg"
+        alt="Profile Photo"
+      />
+    </div>
   </header>
 
-  <section>
-    <h2>আমাদের সংগ্রহ</h2>
-    <img src="https://via.placeholder.com/400x250?text=Sunnati+Lebas" alt="Sunnati Lebas" class="product-img" />
-    <p>সুন্নাহসম্মত পোশাক – পরিপূর্ণ শালীনতা ও স্টাইলের সংমিশ্রণ।</p>
-    <a class="btn" href="https://wa.me/8801XXXXXXXXX" target="_blank">অর্ডার করতে WhatsApp করুন</a>
-  </section>
+  <!-- Search Box Section -->
+  <div class="search-container">
+    <form id="searchForm" onsubmit="return handleSearch(event)">
+      <input
+        type="text"
+        id="searchInput"
+        placeholder="আপনি কি খুঁজছেন?"
+        autocomplete="off"
+      />
+      <span class="search-icon">🔍</span>
+    </form>
+  </div>
 
-  <footer>
-    <p>&copy; ২০২৫ AZZAN SUNNATI LEBAS | সকল অধিকার সংরক্ষিত</p>
-  </footer>
+  <script>
+    function handleSearch(event) {
+      event.preventDefault();
+      const query = document.getElementById("searchInput").value.trim();
+      if (!query) {
+        alert("অনুগ্রহ করে খোঁজার জন্য কিছু লিখুন।");
+        return false;
+      }
+      alert(`আপনি খুঁজেছেন: ${query}`);
+      return false;
+    }
+  </script>
 
 </body>
 </html>
