--- a/index.html
+++ b/index.html
@@ -669,40 +669,46 @@
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
   <script type="module">
-    import { db, collection, getDocs } from './firebase.js';
+    
+async function loadCategoriesFromFirebase() {
+  try {
+    const categoriesCol = collection(db, "categories");
+    const categorySnapshot = await getDocs(categoriesCol);
+    const categories = [];
 
-    const productGrid = document.getElementById("productGrid");
-    const productsRef = collection(db, "products");
+    for (const catDoc of categorySnapshot.docs) {
+      let categoryData = catDoc.data();
+      categoryData.id = catDoc.id;
 
-    async function loadProducts() {
-      const snapshot = await getDocs(productsRef);
-      snapshot.forEach(docSnap => {
-        const data = docSnap.data();
-        const div = document.createElement("div");
-        div.innerHTML = `
-          <img src="${data.img}" width="100" /><br>
-          <strong>${data.name}</strong><br>
-          <span>মূল্য: ${data.price}</span><br><br>
-        `;
-        productGrid.appendChild(div);
-      });
-    }
+      const subcategoriesCol = collection(db, `categories/${catDoc.id}/subcategories`);
+      const subcatSnapshot = await getDocs(subcategoriesCol);
+      categoryData.subcategories = [];
 
-    loadProducts();
-  </script>
-  <script>
-    let categories = [];
+      for (const subcatDoc of subcatSnapshot.docs) {
+        let subcatData = subcatDoc.data();
+        subcatData.id = subcatDoc.id;
 
-    // ডাটা লোড করার ফাংশন
-    async function loadCategories() {
-      try {
-        const res = await fetch('categories.json'); // path ঠিক রাখুন
-        categories = await res.json();
-        showMainCategories();
-      } catch (e) {
-        alert('ডাটা লোড করা যায়নি!');
+        const productsCol = collection(db, `categories/${catDoc.id}/subcategories/${subcatDoc.id}/products`);
+        const productSnapshot = await getDocs(productsCol);
+        subcatData.products = productSnapshot.docs.map(prodDoc => ({ id: prodDoc.id, ...prodDoc.data() }));
+
+        subcatData.productCount = subcatData.products.length;
+        categoryData.subcategories.push(subcatData);
       }
+
+      categoryData.productCount = categoryData.subcategories.reduce((sum, sc) => sum + sc.productCount, 0);
+      categories.push(categoryData);
     }
+
+    return categories;
+  } catch (error) {
+    console.error("Error loading categories from Firebase:", error);
+    return [];
+  }
+}
+
+  </script>
+
 
     // DOM elements
     const mainCategoriesDiv = document.getElementById("mainCategories");
