--- a/index.html
+++ b/index.html
@@ -668,8 +668,8 @@
   <!-- FontAwesome Icon Support -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
-  <script type="module">
-    
+  <script>
+
 async function loadCategoriesFromFirebase() {
   try {
     const categoriesCol = collection(db, "categories");
@@ -707,7 +707,7 @@ async function loadCategoriesFromFirebase() {
   }
 }
 
-  </script>
+
 
 
     // DOM elements
