--- a/index.html
+++ b/index.html
@@ -668,84 +668,19 @@
   <!-- FontAwesome Icon Support -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
- <!-- Firebase SDK যোগ করুন হেডারে বা বডির শেষে -->
-<script type="module">
-  // Import Firebase libraries from CDN
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-  import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+  <script>
+    let categories = [];
 
-  // Firebase config (আপনার Firebase Console থেকে কপি করবেন)
-const firebaseConfig = {
-  apiKey: "AIzaSyC9oDupW2atBfT_Y2TylOjm3dKhG1PpkJY",
-  authDomain: "azaansunatilebas.firebaseapp.com",
-  projectId: "azaansunatilebas",
-  storageBucket: "azaansunatilebas.firebasestorage.app",
-  messagingSenderId: "854978097747",
-  appId: "1:854978097747:web:3ae3d004d5df2568858ca6",
-  measurementId: "G-WF027GFB8B"
-};
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-
-  // আপনার আগের loadCategoriesFromFirebase ফাংশন এখানে যুক্ত করুন:
-  async function loadCategoriesFromFirebase() {
-    try {
-      const categoriesCol = collection(db, "categories");
-      const categorySnapshot = await getDocs(categoriesCol);
-      const categories = [];
-
-      for (const catDoc of categorySnapshot.docs) {
-        let categoryData = catDoc.data();
-        categoryData.id = catDoc.id;
-
-        const subcategoriesCol = collection(db, `categories/${catDoc.id}/subcategories`);
-        const subcatSnapshot = await getDocs(subcategoriesCol);
-        categoryData.subcategories = [];
-
-        for (const subcatDoc of subcatSnapshot.docs) {
-          let subcatData = subcatDoc.data();
-          subcatData.id = subcatDoc.id;
-
-          const productsCol = collection(db, `categories/${catDoc.id}/subcategories/${subcatDoc.id}/products`);
-          const productSnapshot = await getDocs(productsCol);
-          subcatData.products = productSnapshot.docs.map(prodDoc => ({ id: prodDoc.id, ...prodDoc.data() }));
-
-          subcatData.productCount = subcatData.products.length;
-          categoryData.subcategories.push(subcatData);
-        }
-
-        categoryData.productCount = categoryData.subcategories.reduce((sum, sc) => sum + sc.productCount, 0);
-        categories.push(categoryData);
+    // ডাটা লোড করার ফাংশন
+    async function loadCategories() {
+      try {
+        const res = await fetch('categories.json'); // path ঠিক রাখুন
+        categories = await res.json();
+        showMainCategories();
+      } catch (e) {
+        alert('ডাটা লোড করা যায়নি!');
       }
-
-      return categories;
-    } catch (error) {
-      console.error("Error loading categories from Firebase:", error);
-      return [];
     }
-  }
-
-  // আপনার UI কোডের জন্য একটি global ভেরিয়েবল:
-  let categories = [];
-
-  // আপনার মূল ডাটা লোড করার ফাংশন:
-  async function loadCategories() {
-    categories = await loadCategoriesFromFirebase();
-    showMainCategories();
-  }
-
-  // তারপর আপনার UI ফাংশনগুলো (যেমন showMainCategories) এখানে থাকবে বা আগে থেকেই আপনার কোডে আছে।
-
-  // window load হওয়ার পর ডাটা লোড করবেন
-  window.onload = () => {
-    loadCategories();
-  };
-
-
-
-
 
     // DOM elements
     const mainCategoriesDiv = document.getElementById("mainCategories");
