--- a/index copy.html
+++ b/index copy.html
@@ -119,6 +119,127 @@ h1, h2 {
   opacity: 0.3;
 }
 
+/* ======================= Hero Banner Styles ======================= */
+.hero-banner-container {
+  position: relative;
+  width: 90%;
+  max-width: 1200px;
+  height: 400px;
+  margin: 20px auto 30px auto;
+  border-radius: 25px;
+  overflow: hidden;
+  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(135deg, #065f46, #10b981);
+}
+
+.hero-slider {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.hero-slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.8s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-slide.active {
+  opacity: 1;
+}
+
+.hero-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.hero-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(1);
+}
+
+
+
+/* Navigation Dots */
+.hero-dots {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 12px;
+  z-index: 3;
+}
+
+.dot {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+  transition: all 0.3s ease;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+}
+
+.dot.active {
+  background: #10b981;
+  transform: scale(1.2);
+  border-color: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 10px rgba(16, 185, 129, 0.5);
+}
+
+.dot:hover {
+  background: rgba(255, 255, 255, 0.8);
+  transform: scale(1.1);
+}
+
+/* Navigation Arrows */
+.hero-nav {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(255, 255, 255, 0.2);
+  color: white;
+  border: none;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  z-index: 3;
+  backdrop-filter: blur(10px);
+  border: 2px solid rgba(255, 255, 255, 0.3);
+}
+
+.hero-nav:hover {
+  background: rgba(255, 255, 255, 0.3);
+  transform: translateY(-50%) scale(1.1);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.hero-nav.prev {
+  left: 20px;
+}
+
+.hero-nav.next {
+  right: 20px;
+}
+
 /* Premium Search Section */
 .search-container {
   background: linear-gradient(135deg, #065f46 0%, #10b981 100%);
@@ -1571,10 +1692,119 @@ header.top-header::before {
   50% { transform: rotate(180deg) scale(1.1); }
 }
 
+/* ======================= Hero Banner Responsive ======================= */
+@media (max-width: 1200px) {
+  .hero-banner-container {
+    height: 450px;
+  }
+  
+  .hero-title {
+    font-size: 2.5rem;
+  }
+  
+  .hero-subtitle {
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .hero-banner-container {
+    height: 350px;
+    width: 95%;
+    margin: 15px auto 25px auto;
+  }
+  
+
+  
+
+  
+  .hero-nav {
+    width: 45px;
+    height: 45px;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero-banner-container {
+    height: 300px;
+    width: 98%;
+    margin: 10px auto 20px auto;
+  }
+  
+
+  
+  .hero-nav {
+    width: 40px;
+    height: 40px;
+    font-size: 16px;
+  }
+  
+  .hero-nav.prev {
+    left: 15px;
+  }
+  
+  .hero-nav.next {
+    right: 15px;
+  }
+  
+  .hero-dots {
+    bottom: 20px;
+    gap: 10px;
+  }
+  
+  .dot {
+    width: 10px;
+    height: 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  .hero-banner-container {
+    height: 250px;
+    width: 99%;
+    margin: 8px auto 15px auto;
+  }
+  
+
+  
+  .hero-nav {
+    width: 35px;
+    height: 35px;
+    font-size: 14px;
+  }
+  
+  .hero-nav.prev {
+    left: 10px;
+  }
+  
+  .hero-nav.next {
+    right: 10px;
+  }
+  
+  .hero-dots {
+    bottom: 15px;
+    gap: 8px;
+  }
+  
+  .dot {
+    width: 8px;
+    height: 8px;
+  }
+}
+
+@media (max-width: 360px) {
+  .hero-banner-container {
+    height: 200px;
+  }
+  
+
+}
+
 /* ======================= Responsive Design for Chat & AI ======================= */
 @media (max-width: 768px) {
   .chat-bot-container {
-    bottom: 120px;
+    bottom: 170px;
     right: 15px;
   }
   
@@ -1588,10 +1818,10 @@ header.top-header::before {
   }
   
   .chat-window {
-    width: 90vw;
-    height: 70vh;
+    width: 80vw;
+    height: 80vh;
     right: 5vw;
-    bottom: 80px;
+    bottom: 20px;
   }
   
   .chat-header {
@@ -1647,7 +1877,7 @@ header.top-header::before {
   }
   
   .ai-trigger {
-    bottom: 200px;
+    bottom: 250px;
     right: 15px;
     padding: 15px 25px;
     font-size: 14px;
@@ -1655,7 +1885,7 @@ header.top-header::before {
   }
   
   .whatsapp-btn {
-    bottom: 60px;
+    bottom: 20px;
     right: 15px;
   }
 }
@@ -1770,7 +2000,7 @@ header.top-header::before {
   }
   
   .whatsapp-btn {
-    bottom: 50px;
+    bottom: 20px;
     right: 10px;
   }
 }
@@ -1800,7 +2030,7 @@ header.top-header::before {
   }
   
   .whatsapp-btn {
-    bottom: 45px;
+    bottom: 130px;
     right: 8px;
   }
 }
@@ -1838,6 +2068,51 @@ header.top-header::before {
 
 
 
+
+  <!-- Hero Banner Section -->
+  <div class="hero-banner-container">
+    <div class="hero-slider" id="heroSlider">
+      <!-- Slide 1 -->
+      <div class="hero-slide active">
+        <div class="hero-image">
+          <img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Islamic Clothing Collection">
+        </div>
+      </div>
+
+      <!-- Slide 2 -->
+      <div class="hero-slide">
+        <div class="hero-image">
+          <img src="https://images.unsplash.com/photo-1556909114-f6e7ad7d3136?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Attar Collection">
+        </div>
+      </div>
+
+      <!-- Slide 3 -->
+      <div class="hero-slide">
+        <div class="hero-image">
+          <img src="https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Islamic Gifts">
+        </div>
+      </div>
+
+      <!-- Slide 4 -->
+      <div class="hero-slide">
+        <div class="hero-image">
+          <img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Special Offers">
+        </div>
+      </div>
+    </div>
+
+    <!-- Navigation Dots -->
+    <div class="hero-dots" id="heroDots">
+      <span class="dot active" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+      <span class="dot" onclick="currentSlide(4)"></span>
+    </div>
+
+    <!-- Navigation Arrows -->
+    <button class="hero-nav prev" onclick="changeSlide(-1)">❮</button>
+    <button class="hero-nav next" onclick="changeSlide(1)">❯</button>
+  </div>
 
   <!-- Search Box Section -->
 <!-- Search Box Section -->
@@ -2934,6 +3209,71 @@ function showSubcategories(catId) {
   searchResultsSection.style.display = "none";
 }
 
+// ======================= Hero Banner Functions =======================
+let currentSlideIndex = 0;
+const slides = document.querySelectorAll('.hero-slide');
+const dots = document.querySelectorAll('.dot');
+let slideInterval;
+
+function showSlide(index) {
+  // Hide all slides
+  slides.forEach(slide => slide.classList.remove('active'));
+  dots.forEach(dot => dot.classList.remove('active'));
+  
+  // Show current slide
+  if (slides[index]) {
+    slides[index].classList.add('active');
+  }
+  if (dots[index]) {
+    dots[index].classList.add('active');
+  }
+  
+  currentSlideIndex = index;
+}
+
+function nextSlide() {
+  currentSlideIndex = (currentSlideIndex + 1) % slides.length;
+  showSlide(currentSlideIndex);
+}
+
+function prevSlide() {
+  currentSlideIndex = (currentSlideIndex - 1 + slides.length) % slides.length;
+  showSlide(currentSlideIndex);
+}
+
+function changeSlide(direction) {
+  if (direction > 0) {
+    nextSlide();
+  } else {
+    prevSlide();
+  }
+  resetInterval();
+}
+
+function currentSlide(index) {
+  showSlide(index - 1);
+  resetInterval();
+}
+
+function resetInterval() {
+  clearInterval(slideInterval);
+  startAutoSlide();
+}
+
+function startAutoSlide() {
+  slideInterval = setInterval(nextSlide, 5000); // Change slide every 5 seconds
+}
+
+function searchForCategory(category) {
+  document.getElementById('searchInput').value = category;
+  handleSearch(new Event('submit'));
+}
+
+function showOffers() {
+  // You can implement special offers section here
+  alert('বিশেষ অফার দেখতে অনুগ্রহ করে আমাদের সাথে যোগাযোগ করুন!');
+}
+
 // ======================= Initialize Everything =======================
 document.addEventListener("DOMContentLoaded", () => {
   // Initialize custom cursor
@@ -2945,12 +3285,23 @@ document.addEventListener("DOMContentLoaded", () => {
     userBehavior = JSON.parse(stored);
   }
   
+  // Start hero banner auto-slide
+  startAutoSlide();
+  
   // Original GSAP animation
   gsap.from(".item-card", {
     opacity: 0,
     y: 50,
     duration: 0.6,
     stagger: 0.15,
+    ease: "power2.out"
+  });
+  
+  // Hero banner entrance animation
+  gsap.from(".hero-banner-container", {
+    opacity: 0,
+    y: 50,
+    duration: 1,
     ease: "power2.out"
   });
 });
