--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ h1, h2 {
   position: relative;
   width: 90%;
   max-width: 1200px;
-  height: 500px;
+  height: 400px;
   margin: 20px auto 30px auto;
   border-radius: 25px;
   overflow: hidden;
@@ -168,86 +168,10 @@ h1, h2 {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  filter: brightness(0.7);
+  filter: brightness(1);
 }
 
-.hero-content {
-  position: relative;
-  z-index: 2;
-  text-align: center;
-  color: white;
-  padding: 40px;
-  max-width: 600px;
-  background: rgba(0, 0, 0, 0.3);
-  border-radius: 20px;
-  backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  animation: heroContentSlide 1s ease-out;
-}
 
-@keyframes heroContentSlide {
-  from {
-    transform: translateY(30px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-.hero-title {
-  font-size: 3rem;
-  font-weight: 700;
-  margin-bottom: 15px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  line-height: 1.2;
-}
-
-.hero-subtitle {
-  font-size: 1.3rem;
-  margin-bottom: 30px;
-  opacity: 0.9;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-  line-height: 1.4;
-}
-
-.hero-btn {
-  background: linear-gradient(135deg, #10b981, #34d399);
-  color: white;
-  border: none;
-  padding: 15px 35px;
-  border-radius: 30px;
-  font-size: 1.1rem;
-  font-weight: 600;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 8px 25px rgba(16, 185, 129, 0.3);
-  border: 2px solid rgba(255, 255, 255, 0.2);
-  position: relative;
-  overflow: hidden;
-}
-
-.hero-btn::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent);
-  transition: left 0.5s;
-}
-
-.hero-btn:hover::before {
-  left: 100%;
-}
-
-.hero-btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 12px 35px rgba(16, 185, 129, 0.4);
-  background: linear-gradient(135deg, #059669, #10b981);
-}
 
 /* Navigation Dots */
 .hero-dots {
@@ -1768,10 +1692,119 @@ header.top-header::before {
   50% { transform: rotate(180deg) scale(1.1); }
 }
 
+/* ======================= Hero Banner Responsive ======================= */
+@media (max-width: 1200px) {
+  .hero-banner-container {
+    height: 450px;
+  }
+  
+  .hero-title {
+    font-size: 2.5rem;
+  }
+  
+  .hero-subtitle {
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .hero-banner-container {
+    height: 350px;
+    width: 95%;
+    margin: 15px auto 25px auto;
+  }
+  
+
+  
+
+  
+  .hero-nav {
+    width: 45px;
+    height: 45px;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero-banner-container {
+    height: 300px;
+    width: 98%;
+    margin: 10px auto 20px auto;
+  }
+  
+
+  
+  .hero-nav {
+    width: 40px;
+    height: 40px;
+    font-size: 16px;
+  }
+  
+  .hero-nav.prev {
+    left: 15px;
+  }
+  
+  .hero-nav.next {
+    right: 15px;
+  }
+  
+  .hero-dots {
+    bottom: 20px;
+    gap: 10px;
+  }
+  
+  .dot {
+    width: 10px;
+    height: 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  .hero-banner-container {
+    height: 250px;
+    width: 99%;
+    margin: 8px auto 15px auto;
+  }
+  
+
+  
+  .hero-nav {
+    width: 35px;
+    height: 35px;
+    font-size: 14px;
+  }
+  
+  .hero-nav.prev {
+    left: 10px;
+  }
+  
+  .hero-nav.next {
+    right: 10px;
+  }
+  
+  .hero-dots {
+    bottom: 15px;
+    gap: 8px;
+  }
+  
+  .dot {
+    width: 8px;
+    height: 8px;
+  }
+}
+
+@media (max-width: 360px) {
+  .hero-banner-container {
+    height: 200px;
+  }
+  
+
+}
+
 /* ======================= Responsive Design for Chat & AI ======================= */
 @media (max-width: 768px) {
   .chat-bot-container {
-    bottom: 120px;
+    bottom: 170px;
     right: 15px;
   }
   
@@ -1785,10 +1818,10 @@ header.top-header::before {
   }
   
   .chat-window {
-    width: 90vw;
-    height: 70vh;
+    width: 80vw;
+    height: 80vh;
     right: 5vw;
-    bottom: 80px;
+    bottom: 20px;
   }
   
   .chat-header {
@@ -1844,7 +1877,7 @@ header.top-header::before {
   }
   
   .ai-trigger {
-    bottom: 200px;
+    bottom: 250px;
     right: 15px;
     padding: 15px 25px;
     font-size: 14px;
@@ -1852,7 +1885,7 @@ header.top-header::before {
   }
   
   .whatsapp-btn {
-    bottom: 60px;
+    bottom: 20px;
     right: 15px;
   }
 }
@@ -1967,7 +2000,7 @@ header.top-header::before {
   }
   
   .whatsapp-btn {
-    bottom: 50px;
+    bottom: 20px;
     right: 10px;
   }
 }
@@ -1997,7 +2030,7 @@ header.top-header::before {
   }
   
   .whatsapp-btn {
-    bottom: 45px;
+    bottom: 130px;
     right: 8px;
   }
 }
@@ -2044,22 +2077,12 @@ header.top-header::before {
         <div class="hero-image">
           <img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Islamic Clothing Collection">
         </div>
-        <div class="hero-content">
-          <h1 class="hero-title">সুন্নাহ মোতাবেক পোশাক</h1>
-          <p class="hero-subtitle">আপনার স্টাইল, আপনার বিশ্বাস</p>
-          <button class="hero-btn" onclick="showMainCategories()">দেখুন</button>
-        </div>
       </div>
 
       <!-- Slide 2 -->
       <div class="hero-slide">
         <div class="hero-image">
           <img src="https://images.unsplash.com/photo-1556909114-f6e7ad7d3136?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Attar Collection">
-        </div>
-        <div class="hero-content">
-          <h1 class="hero-title">প্রিমিয়াম আতর কালেকশন</h1>
-          <p class="hero-subtitle">স্বর্গীয় সুগন্ধের অভিজ্ঞতা</p>
-          <button class="hero-btn" onclick="searchForCategory('আতর')">কিনুন</button>
         </div>
       </div>
 
@@ -2068,22 +2091,12 @@ header.top-header::before {
         <div class="hero-image">
           <img src="https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Islamic Gifts">
         </div>
-        <div class="hero-content">
-          <h1 class="hero-title">ইসলামিক উপহার</h1>
-          <p class="hero-subtitle">প্রিয়জনদের জন্য বিশেষ কিছু</p>
-          <button class="hero-btn" onclick="searchForCategory('উপহার')">বেছে নিন</button>
-        </div>
       </div>
 
       <!-- Slide 4 -->
       <div class="hero-slide">
         <div class="hero-image">
           <img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Special Offers">
-        </div>
-        <div class="hero-content">
-          <h1 class="hero-title">বিশেষ অফার</h1>
-          <p class="hero-subtitle">সীমিত সময়ের জন্য ২০% ছাড়</p>
-          <button class="hero-btn" onclick="showOffers()">অফার দেখুন</button>
         </div>
       </div>
     </div>
@@ -3196,6 +3209,71 @@ function showSubcategories(catId) {
   searchResultsSection.style.display = "none";
 }
 
+// ======================= Hero Banner Functions =======================
+let currentSlideIndex = 0;
+const slides = document.querySelectorAll('.hero-slide');
+const dots = document.querySelectorAll('.dot');
+let slideInterval;
+
+function showSlide(index) {
+  // Hide all slides
+  slides.forEach(slide => slide.classList.remove('active'));
+  dots.forEach(dot => dot.classList.remove('active'));
+  
+  // Show current slide
+  if (slides[index]) {
+    slides[index].classList.add('active');
+  }
+  if (dots[index]) {
+    dots[index].classList.add('active');
+  }
+  
+  currentSlideIndex = index;
+}
+
+function nextSlide() {
+  currentSlideIndex = (currentSlideIndex + 1) % slides.length;
+  showSlide(currentSlideIndex);
+}
+
+function prevSlide() {
+  currentSlideIndex = (currentSlideIndex - 1 + slides.length) % slides.length;
+  showSlide(currentSlideIndex);
+}
+
+function changeSlide(direction) {
+  if (direction > 0) {
+    nextSlide();
+  } else {
+    prevSlide();
+  }
+  resetInterval();
+}
+
+function currentSlide(index) {
+  showSlide(index - 1);
+  resetInterval();
+}
+
+function resetInterval() {
+  clearInterval(slideInterval);
+  startAutoSlide();
+}
+
+function startAutoSlide() {
+  slideInterval = setInterval(nextSlide, 5000); // Change slide every 5 seconds
+}
+
+function searchForCategory(category) {
+  document.getElementById('searchInput').value = category;
+  handleSearch(new Event('submit'));
+}
+
+function showOffers() {
+  // You can implement special offers section here
+  alert('বিশেষ অফার দেখতে অনুগ্রহ করে আমাদের সাথে যোগাযোগ করুন!');
+}
+
 // ======================= Initialize Everything =======================
 document.addEventListener("DOMContentLoaded", () => {
   // Initialize custom cursor
@@ -3207,12 +3285,23 @@ document.addEventListener("DOMContentLoaded", () => {
     userBehavior = JSON.parse(stored);
   }
   
+  // Start hero banner auto-slide
+  startAutoSlide();
+  
   // Original GSAP animation
   gsap.from(".item-card", {
     opacity: 0,
     y: 50,
     duration: 0.6,
     stagger: 0.15,
+    ease: "power2.out"
+  });
+  
+  // Hero banner entrance animation
+  gsap.from(".hero-banner-container", {
+    opacity: 0,
+    y: 50,
+    duration: 1,
     ease: "power2.out"
   });
 });
