--- a/index.html
+++ b/index.html
@@ -2075,28 +2075,28 @@ header.top-header::before {
       <!-- Slide 1 -->
       <div class="hero-slide active">
         <div class="hero-image">
-          <img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Islamic Clothing Collection">
+          <img src="cover.jpg&auto=format&fit=crop&w=2070&q=80" alt="Islamic Clothing Collection">
         </div>
       </div>
 
       <!-- Slide 2 -->
       <div class="hero-slide">
         <div class="hero-image">
-          <img src="https://images.unsplash.com/photo-1556909114-f6e7ad7d3136?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Attar Collection">
+          <img src="cover.jpg&auto=format&fit=crop&w=2070&q=80" alt="Attar Collection">
         </div>
       </div>
 
       <!-- Slide 3 -->
       <div class="hero-slide">
         <div class="hero-image">
-          <img src="https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Islamic Gifts">
+          <img src="logo.jpg&auto=format&fit=crop&w=2070&q=80" alt="Islamic Gifts">
         </div>
       </div>
 
       <!-- Slide 4 -->
       <div class="hero-slide">
         <div class="hero-image">
-          <img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Special Offers">
+          <img src="cover.jpg&auto=format&fit=crop&w=2070&q=80" alt="Special Offers">
         </div>
       </div>
     </div>
